# tp1DBus

./: CMakeLists.txt  Client.c  Client.h  ClientCommand.c  ClientCommand.h  CommandPrinter.c  CommandPrinter.h  CommandReceiver.c  CommandReceiver.h  DBus.c  DBus.h  ErrorVerifier.c  ErrorVerifier.h  FileReader.c  FileReader.h  Messenger.c  Messenger.h  Server.c  Server.cpp  Server.h  Socket.c  Socket.h  main.c  serverMain.c  serverMain.cpp  stringExtra.c  stringExtra.h
Tests/: CMakeLists.txt  tests.cpp
